Correção CSS dos botões

--- a/front/cadastro.html
+++ b/front/cadastro.html
@@ -41,7 +41,7 @@
                 <h2>Bem-vindo aluno ;)</h2>
                 <p>Caso ja tenha uma conta</p>
                 <p>faça seu login por aqui!</p>
-                <a href="login.html"><button class="btn">Login</button></a>
+                <a href="login.html" style=" text-decoration:none; "><button class="btn">Login</button></a>
             </div>
 
         </div>
