--- a/front/login.html
+++ b/front/login.html
@@ -23,7 +23,7 @@
                 <h2>Bem-vindo aluno ;)</h2>
                 <p>Você é novo por aqui?</p>
                 <p>Crie sua conta!</p>
-                <a href="cadastro.html"><button class="btn">Cadastre-se</button></a>
+                <a href="cadastro.html" style=" text-decoration:none; "><button class="btn">Cadastre-se</button></a>
             </div>
             <div class="loginbox">
                 <h2>Olá, você de novo por aqui? :D</h2>
@@ -37,7 +37,7 @@
                         <i class="fas fa-key"></i>
                         <input type="password" class="pass" placeholder="Senha">
                     </label>
-                 <div class="btn login">Login</div>
+                 <div class="btn login"><h1>Login</h1></div>
                 </form>
             </div>
 
